--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,15 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 monitor_speed = 9600
+
+build_unflags = 
+    -std=gnu++11
+    
+build_flags = 
+    -std=gnu++17
+
 lib_deps = 
-    ; https://github.com/netlabtoolkit/VarSpeedServo
+    https://github.com/RealNobser/VarSpeedServo
     https://github.com/adafruit/Adafruit-PWM-Servo-Driver-Library
     ; https://github.com/GreyGnome/EnableInterrupt
     https://github.com/nRF24/RF24
